modify index.html again

--- a/index.html
+++ b/index.html
@@ -17,33 +17,15 @@
 
 <body>
     <div>
-        <h1>title of article!!!!</h1>
+        <h1>title of article</h1>
         <div>
-            text of content text of content text of content text of content text of
-            content text of content text of content text of content text of content text
-            of content text of content text of content text of content text of content
-            text of content text of content text of content text of content text of
-            content text of content text of content text of content text of content text
-            of content text of content text of content text of content text of content
-            text of content text of content text of content text of content text of
-            content text of content text of content text of content text of content text
-            of content text of content text of content text of content text of content
-            text of content text of content text of content text of content text of
-            content text of content text of content text of content text of content text
-            of content text of content text of content text of content text of content
+            text
         </div>
         <div>
-            jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon
-            to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to
-            convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to
-            convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to
-            convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to
-            convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to
-            convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to convince ppl jargon to
-            convince ppl jargon to convince ppl
+            random jargon
         </div>
         <div>
-            <a href="thankyou.html" style="font-size:20rem" id="buyLink">Buy!</a>
+            <a href="landing.html" style="font-size:20rem" id="buyLink">Go to Landing!</a>
         </div>
     </div>
     <script>
