--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             random jargon
         </div>
         <div>
-            <a href="./landing.html" style="font-size:10rem" id="buyLink">Go to Landing!</a>
+            <a href="./landing.html" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a>
         </div>
     </div>
     <!--<script>-->
