--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ obApi('track', 'PAGE_VIEW');
             random jargon
         </div>
         <div>
-            <a href="./landing.html" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a>
+            <button onclick="window.location.href = "./landing.html";">Go to Landing!!!!!!</button>
+<!--                 <a href="./landing.html" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a> -->
         </div>
     </div>
     <!--<script>-->
