--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@ obApi('track', 'PAGE_VIEW');
         </div>
         <div>
 <!--             <button onclick="window.location.href = "./landing.html";">Go to Landing!!!!!!</button> -->
-                <a href="./landing.html" onclick="click()" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a>
+                <a href="./landing.html" onclick="return click();" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a>
         </div>
         <script>
             function click() {
+                console.log("click happened");
                 obApi('track', 'click');
             }
         
