--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ obApi('track', 'PAGE_VIEW');
             random jargon
         </div>
         <div>
-            <button onclick=" window.open("./landing.html",'_blank'); click()">Go to Landing!!!!!!</button>
-<!--                 <a href="./landing.html" onclick=click() style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a> -->
+<!--             <button onclick=" window.open('./landing.html','_blank'); click()">Go to Landing!!!!!!</button> -->
+             <a href="./landing.html" onclick=click() style="font-size:10rem" id="buyLink" target="_blank">Go to Landing!!!!!!</a>
         </div>
         <script>
             function click() {
