--- a/landing.html
+++ b/landing.html
@@ -32,3 +32,7 @@
             content text of content text of content text of content text of content text
             of content text of content text of content text of content text of content
         </div>
+
+      <img src="https://tr.outbrain.com/pixel?marketerId=001d2da7ebcaeb022a448ccdc4680c75b1&name=click" style="display:none">
+    </div
+  </body
