--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ obApi('track', 'PAGE_VIEW');
         </div>
         <div>
 <!--             <button onclick=" window.open('./landing.html','_blank'); click()">Go to Landing!!!!!!</button> -->
-             <a href="./landing.html" onclick="click()" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a>
+             <a href="./landing.html" onclick="buttonclick()" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a>
         </div>
         <script>
             function click() {
