--- a/index.html
+++ b/index.html
@@ -81,13 +81,9 @@ obApi('track', 'PAGE_VIEW');
         </div>
         <div>
 <!--             <button onclick=" window.open('./landing.html','_blank'); click()">Go to Landing!!!!!!</button> -->
-             <a href="./landing.html" onclick="buttonclick()" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a>
+             <a href="./landing.html" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a>
         </div>
-        <script>
-            function click() {
-                obApi('track', 'buttonclick');
-            }
-        </script>
+        
         
     </div>
     <!--<script>-->
