--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ obApi('track', 'PAGE_VIEW');
         </div>
         <div>
 <!--             <button onclick=" window.open('./landing.html','_blank'); click()">Go to Landing!!!!!!</button> -->
-             <a href="./landing.html" style="font-size:10rem" id="buyLink" onclick="buttonclick()" target="_blank">Go to Landing!!!!!!</a>
+             <a href="./landing.html" style="font-size:10rem" id="buyLink" onclick="buttonclick()">Go to Landing!!!!!!</a>
         </div>
         
         
