--- a/landing.html
+++ b/landing.html
@@ -58,5 +58,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             of content text of content text of content text of content text of content
         </div>
 
-    </div
+    </div>
+    <div>
+<!--             <button onclick=" window.open('./landing.html','_blank'); click()">Go to Landing!!!!!!</button> -->
+             <a href="./thankyou.html" style="font-size:10rem" id="buyLink"">Go to Thank You!!!!!!</a>
+        </div>
   </body
