--- a/thankyou.html
+++ b/thankyou.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KQFT2P7');</script>
+<!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +20,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-<script data-obct type="text/javascript">
+<!-- <script data-obct type="text/javascript">
   /** DO NOT MODIFY THIS CODE**/
   !function(_window, _document) {
     var OB_ADV_ID='001d2da7ebcaeb022a448ccdc4680c75b1';
@@ -23,9 +30,13 @@ obApi('track', 'PAGE_VIEW');
 </script>
 <script>
 obApi('track', 'thankyoupixel');
-</script>
+</script> -->
   </head>
   <body>
+	  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KQFT2P7"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 	<div>
 		<h1>You bought something invisible 😱</h1>
 		<div>
