--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@ obApi('track', 'PAGE_VIEW');
         </div>
         <div>
 <!--             <button onclick=" window.open('./landing.html','_blank'); click()">Go to Landing!!!!!!</button> -->
-             <a href="./landing.html" style="font-size:10rem" id="buyLink" onclick="buttonclick()">Go to Landing!!!!!!</a>
+             <a href="./landing.html" style="font-size:10rem" id="buyLink">Go to Landing!!!!!!</a>
         </div>
         
         
     </div>
-    <script>
+<!--     <script>
         function buttonclick() {
             obApi('track', 'buttonclick');
         }
-      </script>
+      </script> -->
     <!--<script>-->
         <!--const firePixel = (e) => {-->
               <!--/** DO NOT MODIFY THIS CODE**/-->
