--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@ obApi('track', 'PAGE_VIEW');
 <!--     <script>
         function buttonclick() {
             obApi('track', 'buttonclick'); -->
-//                     fetch('https://tr.outbrain.com/pixel?ob_click_id=v1-521545010f74369134460124537c4139-001d2da7ebcaeb022a448ccdc4680c75b1-gjrtczdggazdelldg5stmljugezdmllcga4dollgmiytgmzuheydaylbgq&name=buttonclick')
+<!-- //                     fetch('https://tr.outbrain.com/pixel?ob_click_id=v1-521545010f74369134460124537c4139-001d2da7ebcaeb022a448ccdc4680c75b1-gjrtczdggazdelldg5stmljugezdmllcga4dollgmiytgmzuheydaylbgq&name=buttonclick')
 //                           .then(response => response.json())
 //                           .then(data => console.log(data));
             
         }
-      </script>
+      </script> -->
     <!--<script>-->
         <!--const firePixel = (e) => {-->
               <!--/** DO NOT MODIFY THIS CODE**/-->
