--- a/landing.html
+++ b/landing.html
@@ -38,7 +38,7 @@ obApi('track', 'PAGE_VIEW');
     
     window.onload = function() {
     setTimeout(function () {
-      opApi('track', '5 seconds on site');
+      obApi('track', '5 seconds on site');
     }, 5000);
 }
     
