--- a/landing.html
+++ b/landing.html
@@ -14,11 +14,11 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<!--     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KQFT2P7');</script>
+    })(window,document,'script','dataLayer','GTM-KQFT2P7');</script> -->
     <!-- End Google Tag Manager -->
     
 
@@ -31,9 +31,11 @@
 </head>
 
 <body>
+        <img src="https://tr.outbrain.com/unifiedPixel?marketerId=001d2da7ebcaeb022a448ccdc4680c75b1&name=PAGE_VIEW" style="display:none">
+
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KQFT2P7"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KQFT2P7"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
 <!-- End Google Tag Manager (noscript) -->
     <div>
         <h1>title of article</h1>
